@@ -6,6 +6,17 @@ Intelligent and Mobile Robotics Group, Department of Cybernetics,
 Faculty of Electrical Engineering, Czech Technical University in Prague.
 All rights reserved.
 
+
+This work was supported by SYMBRION and REPLICATOR projects.
+The SYMBRION project is funded by European Commission within the work
+"Future and Emergent Technologies Proactive" under grant agreement no.
+216342.
+The REPLICATOR project is funded within the work programme "Cognitive
+Systems, Interaction, Robotics" under grant agreement no. 216240.
+http://www.symbrion.eu/
+http://www.replicators.eu/
+
+
 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions are met:
 
