@@ -20,3 +20,26 @@ libjoints_la_SOURCES =  joints.h \
                         pr.h pr.cpp \
                         piston.h piston.cpp
 
+#################################
+#   Export more files for external solver use
+#################################
+libode_la_includedir = $(includedir)/src/joints
+libode_la_include_HEADERS = 	\
+				universal.h \
+				slider.h \
+				pu.h \
+				pr.h \
+				plane2d.h \
+				piston.h \
+				null.h \
+				lmotor.h \
+				joints.h \
+				joint_internal.h \
+				joint.h \
+				hinge.h \
+				hinge2.h \
+				fixed.h \
+				contact.h \
+				ball.h \
+				amotor.h
+
